--- a/Lectia 16 Web Storage2/index.html
+++ b/Lectia 16 Web Storage2/index.html
@@ -13,13 +13,13 @@
       <span class="addBtn" id="addBtn">Add</span>
     </div>
 
-    <ul id="myUL">
+    <ul id="myUewqeqwewqL">
       <!-- <li>Hit the gym</li>
-      <li class="checked">Pay bills</li>
+      <li class="checkeeqwewqed">Pay bills</li>
       <li>Meet George</li>
       <li>Buy eggs</li>
       <li>Read a book</li>
-      <li>Organize office</li> -->
+      <li>Organize office</li> -->eewqewqeqw
     </ul>
 
     <script src="./js/script.js" type="module"></script>
